k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: adhupraba/comments
          # for local development purpose only
          imagePullPolicy: Never
          ports:
            - containerPort: 7002
              protocol: TCP
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-svc
spec:
  selector:
    app: comments
  ports:
    - port: 7002
      targetPort: 7002
      protocol: TCP
