k8s/eventbus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: adhupraba/eventbus
          # for local development purpose only
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-svc
spec:
  selector:
    app: eventbus
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
