k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: adhupraba/query
          # for local development purpose only
          imagePullPolicy: Never
          ports:
            - containerPort: 7003
              protocol: TCP
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-svc
spec:
  selector:
    app: query
  ports:
    - port: 7003
      targetPort: 7003
      protocol: TCP
