k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - pathType: Prefix
            path: /posts/create
            backend:
              service:
                name: posts-svc
                port:
                  number: 7001
          - pathType: Prefix
            path: /posts/?(.*)/comments
            backend:
              service:
                name: comments-svc
                port:
                  number: 7002
          - pathType: Prefix
            path: /posts
            backend:
              service:
                name: query-svc
                port:
                  number: 7003
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
